--- a/index.html
+++ b/index.html
@@ -3,13 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik+Maps&family=Ubuntu:ital@1&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./style/style.css">
     <link rel="shortcut icon" href="./images/santo.png" type="image/x-icon">
     <title>portfolio</title>
 </head>
 <body>
     <header>
-
+    <nav>
+        <h3 class="nav-title">San<span class="text-primary">t</span>o</h3>
+        <ul>
+            <li><a href="">portfolio</a></li>
+            <li><a href="">Blog</a></li>
+            <li><button class="btn-primary">Hire me</button></li>
+        </ul>
+    </nav>
     </header>
     <main>
 
