banner content added

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <title>portfolio</title>
 </head>
 <body>
-    <header>
+    <!-- header section  -->
+    <header class="header" >
     <nav>
         <h3 class="nav-title">San<span class="text-primary">t</span>o</h3>
         <ul>
@@ -20,10 +21,24 @@
             <li><button class="btn-primary">Hire me</button></li>
         </ul>
     </nav>
+    <div class="banner">
+        <div class="banner-content">
+            <h3 class="banner-greeting"> Hi,I am</h3>
+            <h1 class="banner-title">Santo Barman</h1>
+            <p>
+                "Web development involves coding, designing, and maintaining websites. Skills include HTML, CSS, JavaScript, and various frameworks for dynamic and responsive pages."
+            </p>
+            <button class="btn-primary">Download Cv</button>
+            <button class="btn-primary">Contact</button>
+        </div>
+        <img class="profile-photo" src="/images/santo.png" alt="profile-photo">
+    </div>
     </header>
+    <!-- main section  -->
     <main>
 
     </main>
+    <!-- footer section  -->
     <footer>
 
     </footer>
