about section added

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="banner-content">
             <h3 class="banner-greeting"> Hi,I am</h3>
             <h1 class="banner-title">Santo Barman</h1>
-            <p>
+            <p class="banner-discription">
                 "Web development involves coding, designing, and maintaining websites. Skills include HTML, CSS, JavaScript, and various frameworks for dynamic and responsive pages."
             </p>
             <button class="btn-primary">Download Cv</button>
@@ -36,7 +36,11 @@
     </header>
     <!-- main section  -->
     <main>
-
+    <section class="about">
+        <h3 class="section-title">About</h3>
+        <p class="section-description">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+        
+    </section>
     </main>
     <!-- footer section  -->
     <footer>
